--- a/Fallout3Fixer/Fallout3Fixer.csproj
+++ b/Fallout3Fixer/Fallout3Fixer.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IniFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -110,6 +111,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="IconGroup101.ico" />
+    <None Include="Resources\Microsoft.Deployment.WindowsInstaller.xml" />
+    <None Include="Resources\Microsoft.Deployment.WindowsInstaller.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
